testcases/negative/duplicate_version.vcf
BEGIN:VCARD
VERSION:4.0
VERSION:3.0
FN:John Doe
END:VCARD
